--- a/static/home.html
+++ b/static/home.html
@@ -1,39 +1,34 @@
 
 <!-- Content Header (Page header) -->
 <section class="content-header">
-  <h1>
-    Home
-    <small>The root of all leaves</small>
-  </h1>
-  <ol class="breadcrumb">
-    <li class="active">Home</li>
-  </ol>
+    <h1>
+        Home
+        <small>The root of all leaves</small>
+    </h1>
+    <ol class="breadcrumb">
+        <li class="active">Home</li>
+    </ol>
 </section>
 
 <!-- Main content -->
 <section class="content">
-  <div class="callout callout-info lead">
-    <h4>Welcome!</h4>
+    <div class="callout callout-info lead">
+        <h4>Welcome!</h4>
+        <p>
+        Welcome to bzShare, a Free / Libre Open Source yet verbose social and file sharing platform.
+        </p>
+    </div>
     <p>
-      bzShare is a <strong>F/LOSS</strong> (Free / Libre Open Source) project hosted on <a href="https://github.com/ht35268/bzShare">GitHub&copy;</a>. It is inspired by <a href="https://github.com/xmcp">@xmcp</a>'s <a href="https://github.com/xmcp/EZShare">EZShare</a> and initiated by <a href="https://github.com/ht35268">@ht35268 / Geoffrey, Tang</a>.
+    bzShare is a project hosted on <a href="https://github.com/ht35268/bzShare">GitHub&copy;</a>. It is inspired by <a href="https://github.com/xmcp">@xmcp</a>'s <a href="https://github.com/xmcp/EZShare">EZShare</a> and initiated by <a href="https://github.com/ht35268">@ht35268 / Geoffrey, Tang</a>.
     </p>
     <p>
-      The main aim of this project is to deliver a rapid responsive, highly integrated and lightweight social platform that is completely based on HTML5 and Python. It targets a place for oiers to share their ideas and train their abilities of programming on this platform.
+    The main aim of this project is to deliver a rapid responsive, highly integrated and lightweight social platform that is completely based on HTML5 and Python. It targets a place for oiers to share their ideas and train their abilities of programming on this platform.
     </p>
-  </div>
-
-  <div class="callout callout-warning lead">
-    <h4>Warning</h4>
     <p>
     We do not gurantee your privacy on this website, as nor should any other website do. Your privacy is based on how this cloud platform works, how it administrates et cetera. Yet we assure you that we would respect your privacy and try not to break it with our utmost efforts.
     </p>
-  </div>
-
-  <div class="callout callout-warning lead">
-    <h4>Warning</h4>
     <p>
     Register a user if you are new to it and you may gain access to more features. However, you should avoid using a commonly-used password as we do not take the risk and the responsibility for security defects and certain data loss or leaks. The first step to gaining security is to respect your security yourself.
     </p>
-  </div>
 </section>
 <!-- /.content -->
