--- a/static/index.html
+++ b/static/index.html
@@ -103,6 +103,12 @@
                             </li>
                         </ul>
                     </li>
+                    <!-- Right control button. -->
+                    <li>
+                        <a href="#" data-href="/files">
+                            <span class="ion ion-folder"></span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -278,13 +284,13 @@
 
 
 <div class="modal fade" id="dialog-input-string-container" tabindex="-1"><div class="modal-dialog modal-lg"><div class="modal-content">
-    <form id="dialog-input-string-form" method="post" action="/">
+    <form id="dialog-input-string-form" method="" action="">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
             <h4 class="modal-title" id="dialog-input-string-header">Enter text</h4>
         </div>
         <div class="modal-body">
-            <textarea name="content" class="form-control" style="width: 100%; height: 40px; resize: none;" placeholder="Enter text" id="dialog-input-string-body"></textarea>
+            <input name="target" class="form-control" style="width: 100%; height: 40px; resize: none;" placeholder="Enter text" id="dialog-input-string-body"></input>
         </div>
         <div class="modal-footer">
             <button type="submit" class="btn btn-info">
